# supmatch

./: LICENSE  README.md  pyproject.toml  setup.py  supmatch.py
benchmarks/: comparisons.py
